# Vector-Search-Engine

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.observability.yml  docker-compose.yml  plan.md  progress.md  useCase.md
.github/workflows/: ci.yml
benches/: search_bench.rs
docs/adr/: 0001-persistence-choices.md  0002-hybrid-search.md
examples/: eval_recall.rs  grpc_client.rs  rag_adapter.py
helm/vector-search-engine/: Chart.yaml  values.yaml
helm/vector-search-engine/templates/: _helpers.tpl  deployment.yaml  service.yaml
k8s/: deployment.yaml
observability/: prometheus.yml
proto/: vector_search.proto
scripts/: load_test.sh
src/: api.rs  collection.rs  dataset.rs  embedder.rs  grpc_stub.rs  hnsw_index.rs  lib.rs  main.rs  quantization.rs
static/: index.html
