[package]
name = "vector-search-engine"
version = "0.1.0"
edition = "2021"
authors = ["Vector Search Engine Contributors"]
description = "A production-grade vector search engine in Rust with HNSW, ONNX embeddings, and REST API"
license = "MIT"
repository = "https://github.com/example/vector-search-engine"
keywords = ["vector-search", "hnsw", "embeddings", "semantic-search", "onnx"]
categories = ["database-implementations", "api-bindings", "science"]

[dependencies]
# Web framework
axum = "0.8"
tower-http = { version = "0.7", features = ["cors", "trace", "limit", "fs"] }
tower = "0.5"
tower_governor = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging & observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# ONNX embeddings + tokenizer (all-MiniLM-L6-v2)
# Using specific features to reduce native-tls/openssl requirement
ort = { version = "2.0.0-rc.12", default-features = false, features = ["download-binaries", "std", "ndarray", "tls-native-vendored"] }
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
ndarray = "0.15"

# Force vendored OpenSSL so we don't need system libssl-dev / pkg-config in minimal envs.
# This is only needed because some transitive crates (ureq via ort download) pull openssl.
openssl = { version = "0.10", features = ["vendored"] }

# Lightweight HTTP client for downloading the embedding model (rustls-based, no native-tls conflict)
ureq = "3"

# Serialization for sled documents and HNSW label mappings
bincode = "1.3"

# HNSW approximate nearest neighbor index
hnsw_rs = "0.3"
# Distance traits used by hnsw_rs (DistDot for normalized vectors → cosine)
anndists = "0.1"

# Persistence
sled = "1.0.0-alpha.124"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# IDs and utilities
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
thiserror = "2"
anyhow = "1"

# Metrics (for /metrics and Prometheus)
prometheus = "0.14"

# Phase 7: OpenTelemetry for traces to integrate with SigNoz, Jaeger, etc.
opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry-otlp = { version = "0.16", features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
tracing-opentelemetry = "0.24"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "search_bench"
harness = false
