[package]
name = "vector-search-engine"
version = "0.1.0"
edition = "2021"
authors = ["Vector Search Engine Contributors"]
description = "A production-grade vector search engine in Rust with HNSW, ONNX embeddings, and REST API"
license = "MIT"
repository = "https://github.com/example/vector-search-engine"
keywords = ["vector-search", "hnsw", "embeddings", "semantic-search", "onnx"]
categories = ["database-implementations", "api-bindings", "science"]

[dependencies]
# Web framework
axum = "0.8"
tower-http = { version = "0.7", features = ["cors", "trace", "limit", "fs"] }
tower = "0.5"
tower_governor = "0.8"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging & observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# ONNX embeddings + tokenizer (all-MiniLM-L6-v2)
# Using specific features to reduce native-tls/openssl requirement
ort = { version = "2.0.0-rc.12", default-features = false, features = ["download-binaries", "std", "ndarray", "tls-native-vendored"] }
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
ndarray = "0.15"

# Force vendored OpenSSL so we don't need system libssl-dev / pkg-config in minimal envs.
# This is only needed because some transitive crates (ureq via ort download) pull openssl.
openssl = { version = "0.10", features = ["vendored"] }

# Lightweight HTTP client for downloading the embedding model (rustls-based, no native-tls conflict)
ureq = { version = "3", features = ["json"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures-util = { version = "0.3", default-features = false }

# Serialization for sled documents and HNSW label mappings
bincode = "1.3"

# HNSW approximate nearest neighbor index
hnsw_rs = "0.3"
# Distance traits used by hnsw_rs (DistDot for normalized vectors → cosine)
anndists = "0.1"

# Persistence
sled = "1.0.0-alpha.124"

# Phase 9 concurrency
dashmap = "5"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# IDs and utilities
uuid = { version = "1", features = ["v4", "serde", "fast-rng"] }
thiserror = "2"
anyhow = "1"

# Phase 7: OpenTelemetry for traces (metrics are exposed via lightweight manual
# Prometheus text exposition on /metrics - no `prometheus` crate dependency)
# See observability/ and docker-compose.observability.yml for scrapers.

# Phase 7: OpenTelemetry for traces to integrate with SigNoz, Jaeger, etc.
opentelemetry = { version = "0.23", features = ["trace"] }
opentelemetry-otlp = { version = "0.16", features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio"] }
tracing-opentelemetry = "0.24"

# Phase 8: Real gRPC server (optional feature - requires protoc at build time)
# cargo build --features grpc   (then cargo run --features grpc -- serve ...)
tonic = { version = "0.11", optional = true }
prost = { version = "0.12", optional = true }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
criterion = "0.5"

[features]
default = []
# Phase 8 gRPC: enables tonic server. Requires `protoc` (protobuf-compiler) on the build machine.
grpc = ["dep:tonic", "dep:prost"]

[[bench]]
name = "search_bench"
harness = false

[build-dependencies]
tonic-build = "0.11"
prost-build = "0.12"
